# xbrl

./: .gitignore  pyproject.toml  readme.md
src/: html_parse.py  main.py
src/utils/: parsing.py
tests/: test_slash_split.py
