[tool.poetry]
name = "xbrl"
version = "0.1.0"
description = ""
authors = ["lynma01 <lynma01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
py-xbrl = "^2.2.6"
httpx = "^0.23.3"
beautifulsoup4 = "^4.12.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
